<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/parentLayout" >

    
    
    	


    <LinearLayout
        android:weightSum="240"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	android:orientation="horizontal">

   
    <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blank2"
	    android:weightSum="20" />
     <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blank"
	    android:weightSum="20" />
   
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/mon"
	    android:weightSum="20" />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blank2"
	    android:weightSum="20" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/tue"
	    android:weightSum="20" />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blank2"
	    android:weightSum="20" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/wed"
	    android:weightSum="20" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blank2"
	    android:weightSum="20" />
	
	
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/thu"
	    android:weightSum="20" />
	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blank"
	    android:weightSum="20" />

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/fri"
	    android:weightSum="20" />

		<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/blank"
	    android:weightSum="20" />
	
		<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/sat"
	    android:weightSum="20" />
	


	
	</LinearLayout>
    
    <TableLayout 
    android:id="@+id/tableLayout1"
    android:layout_width="match_parent"
    android:layout_height="400dp"     >        
    </TableLayout>

    <TableLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"     >

        <Button
            android:id="@+id/confBut"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

	</TableLayout>
        
</LinearLayout>

 
  